# smth

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
api/: .flake8  Dockerfile  base_factory.py  conftest.py  entrypoint.sh  manage.py  pyproject.toml
api/fixtures/: initial.yaml
api/tasks/: admin.py  api.py  apps.py  client.py  factories.py  models.py  schema.py  selectors.py  service.py  tasks.py
api/tasks/migrations/: 0001_initial.py  0002_rename_time_to_process_task_processing_time.py  0003_alter_task_processing_time.py
api/tasks/tests/: test_selectors.py  test_tasks.py
api/tasks/tests/functional/: __init__.py  test_api.py  test_client.py
api/tasks_api/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
